--- a/docs-content/jmxtrans.html.md.erb
+++ b/docs-content/jmxtrans.html.md.erb
@@ -9,7 +9,7 @@ This topic is intended for app developers who are going to use the Heartbeat ser
 
 A custom Java buildpack is required to integrate the JMXTrans agent into a Java app for JMX monitoring.
 JMXTrans agent integration enables the app to send performance metrics to the StatsD server.
-These metrics are subsequently pushed to Graphite’s Carbon component for caching and persistence. 
+These metrics are subsequently pushed to Graphite's Carbon component for caching and persistence. 
 
 ##<a id='compile'></a> Downloading and Compiling a Java App
 
@@ -56,7 +56,7 @@ These metrics are subsequently pushed to Graphite’s Carbon component for cachi
 
 ##<a id='binding'></a> Binding a Service Instance to the App
 
-<p class="note"><strong>Note</strong>: Do not create service instances inside the administrator's org/space that you provided at the installation step.</p>
+<p class="note"><strong>Note</strong>: Do not create service instances inside the administrator's org and space that you provided at the installation step.</p>
 
 1. Navigate to cf marketplace.
 
