Update release-notes for 0.8.91

--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -9,16 +9,15 @@ These are release notes for Altoros Heartbeat for Pivotal Cloud Foundry (PCF).
 
 **Release Date:** August 02, 2017
 
-* Features included in this release:
-* Minor Dashbards updates
+Features included in this release:
+
+* Added support of external MySQL for PCF Elastic Runtime
+* Added support of on demand version of Crunchy PostgreSQL
+* Minor dashboards updates
 * Update carbonapi version
-* Update grafana version
-* ?Add system domain to domain list automatically
-* ?Enable autoapprove for grafana's UAA client
-* ?Rename of BOSH release
+* Update Grafana version
 * Disallow creation of service instance in admin's org/space
 * Added delete-uaa-client errand
-* Update cf-heartbeat-broker
 
 Known issues in this release:
 
