--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -7,22 +7,22 @@ These are release notes for Altoros Heartbeat for Pivotal Cloud Foundry (PCF).
 
 ##<a id="ver"></a> v0.8.91
 
-**Release Date:** August 02, 2017
+**Release Date:** August 03, 2017
 
 Features included in this release:
 
 * Added support of external MySQL for PCF Elastic Runtime
-* Added support of on demand version of Crunchy PostgreSQL
-* Minor dashboards updates
-* Update carbonapi version
+* Added support of on-demand version of Crunchy PostgreSQL
+* Minor updates of dashboards
+* Update the version of carbonapi
 * Update Grafana version
-* Disallow creation of service instance in admin's org/space
+* Forbidden creation of service instance in admin's org/space
 * Added delete-uaa-client errand
 
 Known issues in this release:
 
 * After renaming the org/space with the Altoros Heartbeat service instance, access to metrics of this org/space is unavailable.
-  For instructions on how to fix the issue manually, contact Altoros.
+  For instructions on how to fix the issue manually, contact Altoros support team.
 * Alerts are not enabled automatically after installation of the Altoros Heartbeat for PCF tile.
   To enable alerts, open the **alerting** dashboard and click the save icon.
 
