--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -18,6 +18,7 @@ Features included in this release:
 * Update Grafana version
 * Forbidden creation of service instance in admin's org/space
 * Added delete-uaa-client errand
+* Changed VM requirements in "Resource Config"
 
 Known issues in this release:
 
