--- a/docs-content/installingcollectd.html.md.erb
+++ b/docs-content/installingcollectd.html.md.erb
@@ -101,7 +101,7 @@ Follow the steps below to create a collectd manifest for your deployment:
 
     <p class="note"><strong>Note</strong>: If you installed other BOSH add-ons,
     you must merge the collectd manifest into your existing add-on manifest.
-    Append the contents of `collectd.yml` to your existing add-on YML file.</p>
+    Append the contents of <code>collectd.yml</code> to your existing add-on YML file.</p>
 
     <pre class="terminal">$ bosh update runtime-config PATH/YOUR-ADD-ON-YML.yml</pre>
 
