--- a/docs-content/statsd.html.md.erb
+++ b/docs-content/statsd.html.md.erb
@@ -13,7 +13,7 @@ These metrics are subsequently pushed to Graphite’s Carbon component for cachi
 
 1. Download a language-specific StatsD client library from [this Github page](https://github.com/etsy/statsd/wiki#client-implementations) and add it into your app code.
 
-1. Follow steps 1–5 from [Binding a Service Instance to the App](./jmxtrans.html#binding) to bind the Heartbeat service to your app.
+1. Follow the steps in [Binding a Service Instance to the App](./jmxtrans.html#binding) to bind the Heartbeat service to your app.
 
 1. Parse environment variables in the code to get a StatsD endpoint.
    To do this:
