--- a/docs-content/installingcollectd.html.md.erb
+++ b/docs-content/installingcollectd.html.md.erb
@@ -29,7 +29,7 @@ To complete the collectd add-on installation:
 A collectd manifest is a YML file that contains runtime configuration information for the collectd add-on.
 Follow the steps below to create a collectd manifest for your deployment:
 
-1. Create a file named `collectd.yml`, starting with the code below as a template:
+1. <a id='createmanifest'></a>Create a file named `collectd.yml`, starting with the code below as a template:
 
     ```
     releases:
@@ -153,11 +153,11 @@ roll back to a previous configuration:
 
     <pre class="terminal">$ bosh runtime-config > PATH-TO-SAVE-THE-RUNTIME-CONFIG</pre>
 
-1. Remove the lines added at the *Downloading and Deploying the collectd add-on* stage. 
+1. Remove the lines added at <a href="#createmanifest">the step #1 of *Creating a collectd Manifest* section</a>.
 
 1. Update the runtime configuration.
 
-    <pre class="terminal">$bosh update runtime-config PATH-TO-SAVE-THE-RUNTIME-CONFIG</pre>
+    <pre class="terminal">$ bosh update runtime-config PATH-TO-SAVE-THE-RUNTIME-CONFIG</pre>
 
 1. Navigate to your Installation Dashboard in Ops Manager.
 
