Change link format in installingcollectd.html.md.erb

--- a/docs-content/installingcollectd.html.md.erb
+++ b/docs-content/installingcollectd.html.md.erb
@@ -153,7 +153,7 @@ roll back to a previous configuration:
 
     <pre class="terminal">$ bosh runtime-config > PATH-TO-SAVE-THE-RUNTIME-CONFIG</pre>
 
-1. Remove the lines added at <a href="#createmanifest">step 1</a> of [Creating a collectd Manifest](#manifest)</a>.
+1. Remove the lines added at [step 1](#createmanifest) of [Creating a collectd Manifest](#manifest).
 
 1. Update the runtime configuration.
 
