--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -5,7 +5,24 @@ owner: Partners
 
 These are release notes for Altoros Heartbeat for Pivotal Cloud Foundry (PCF).
 
-##<a id="ver"></a> v0.8.91
+##<a id="v0.8.92"></a>v0.8.92
+
+**Release Date:** August 16, 2017
+
+Features included in this release:
+
+* Stemcell update (security fix)
+* Fixed a bug affecting performance
+* VM requirements decreased (the "Resource Config" section)
+
+Known issues in this release:
+
+* After renaming the org/space with the Altoros Heartbeat service instance, access to metrics of this org/space is unavailable.
+  For instructions on how to fix the issue manually, contact Altoros support team.
+* Alerts are not enabled automatically after installation of the Altoros Heartbeat for PCF tile.
+  To enable alerts, open the **alerting** dashboard and click the save icon.
+
+##<a id="v0.8.91"></a>v0.8.91
 
 **Release Date:** August 3, 2017
 
@@ -27,7 +44,7 @@ Known issues in this release:
 * Alerts are not enabled automatically after installation of the Altoros Heartbeat for PCF tile.
   To enable alerts, open the **alerting** dashboard and click the save icon.
 
-##<a id="ver"></a> v0.8.90
+##<a id="v0.8.90"></a>v0.8.90
 
 **Release Date:** July 20, 2017
 
