--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -65,11 +65,11 @@ The following table provides version and version-support information about Altor
     </tr>
     <tr>
         <td>Compatible Ops Manager version(s)</td>
-        <td>v1.9.x, v1.10.x and v1.11.x</td>
+        <td>v1.9.x, v1.10.x, and v1.11.x</td>
     </tr>
     <tr>
         <td>Compatible Elastic Runtime version(s)</td>
-        <td>v1.9.x, v1.10.x and v1.11.x</td>
+        <td>v1.9.x, v1.10.x, and v1.11.x</td>
     </tr>
     <tr>
         <td>IaaS support</td>
