added to the release notes

--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -11,7 +11,7 @@ These are release notes for Altoros Heartbeat for Pivotal Cloud Foundry (PCF).
 
 Features included in this release:
 
-* Stemcell update (security fix)
+* Remove the minor version number from stemcell criteria to allow the user to apply stemcell security patches
 * Fixed a bug affecting performance
 * VM requirements decreased (the "Resource Config" section)
 
