--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -13,7 +13,7 @@ Features included in this release:
 
 * Remove the minor version number from stemcell criteria to allow the user to apply stemcell security patches
 * Fixed a bug affecting performance
-* VM requirements decreased (the "Resource Config" section)
+* VM requirements decreased in **Resource Config**
 
 Known issues in this release:
 
@@ -35,7 +35,7 @@ Features included in this release:
 * Update Grafana version
 * Forbidden creation of service instance in admin's org/space
 * Added delete-uaa-client errand
-* Changed VM requirements in "Resource Config"
+* Changed VM requirements in **Resource Config**
 
 Known issues in this release:
 
