--- a/docs-content/using.html.md.erb
+++ b/docs-content/using.html.md.erb
@@ -8,7 +8,7 @@ This topic describes how to use Altoros Heartbeat for Pivotal Cloud Foundry (PCF
 ##<a id='create'></a> Creating a Service Instance (Heartbeat for Developers)
 
 To start using Heartbeat, a developer needs to create an Altoros Heartbeat service instance inside their org/space.
-After this, they will be able to navigate to a URL in a browser to access Altoros Heartbeat’s Grafana dashboard and log in using their PCF login and password.
+After this, they will be able to navigate to a URL in a browser to access Altoros Heartbeat's Grafana dashboard and log in using their PCF login and password.
 After login, the developer gets access to Developer View.
 
 <p class="note"><strong>Note</strong>: You do not need to create service instances inside the org/space
@@ -33,9 +33,9 @@ To create an Altoros Heartbeat service instance:
 
       <pre class="terminal">cf create-service heartbeat standard heartbeat</pre>
 
-##<a id='access'></a>Accessing Altoros Heartbeat’s Dashboard
+##<a id='access'></a>Accessing Altoros Heartbeat's Dashboard
 
-To access Altoros Heartbeat’s dashboard, perform the following steps:
+To access Altoros Heartbeat's dashboard, perform the following steps:
 
 1. Navigate to the **Ops Manager Installation Dashboard** and click the **Pivotal Elastic Runtime** tile.
 
@@ -57,9 +57,9 @@ To access Altoros Heartbeat’s dashboard, perform the following steps:
 
 1. Click **Authorize**.
 
-##<a id='configure'></a>Configuring Altoros Heartbeat’s Dashboard
+##<a id='configure'></a>Configuring Altoros Heartbeat's Dashboard
 
-Altoros Heartbeat’s dashboard is based on open source Grafana software.
+Altoros Heartbeat's dashboard is based on open source Grafana software.
 For information about creating and editing Grafana graphs and panels, see [Grafana documentation](http://docs.grafana.org/guides/getting_started/).
 
 ##<a id='viewing'></a>Viewing Metrics from PCF 
@@ -76,12 +76,12 @@ The dashboards accessible from the Admin view are:
 
 **Overview** dashboards:
 
-* The **Pivotal BOSH Overview dashboard** contains panels with BOSH health metrics, such as sum CPU and memory/swap usage, and VM’s availability.
+* The **Pivotal BOSH Overview dashboard** contains panels with BOSH health metrics, such as sum CPU and memory/swap usage, and VM's availability.
 
 * The **Pivotal Cloud Foundry Overview** dashboard contain panels with metrics on the state of long-running processes, 
   container count and capacity of remaining containers, % of running VMs, average CPU usage on cells,
   overall memory usage on cells, overall swap usage on cells, load average on cells, all TCP connections of routers,
-  and all apps’ CPU, memory and disk usage.
+  and all apps' CPU, memory and disk usage.
 
 **Apps dashboards** cover app CPU and memory metrics, metrics on CPU usage and memory usage on Diego cell,
   disk usage, and HTTP requests/error/status code rates and response time.
@@ -89,7 +89,7 @@ The dashboards accessible from the Admin view are:
 **BOSH** dashboards:
 
 * The Pivotal BOSH Overview dashboard contains panels with BOSH health metrics,
-  such as sum CPU and memory/swap usage, and VM’s availability.
+  such as sum CPU and memory/swap usage, and VM's availability.
 
 * The Pivotal BOSH VMs dashboard contains panels with metrics of any VM managed by BOSH, including CPU usage,
   LA 1 min, memory/swap usage, health, health timeline, health status, system disc usage, persistent disc usage,
