Added release notes for 0.8.93

--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -5,6 +5,22 @@ owner: Partners
 
 These are release notes for Altoros Heartbeat for Pivotal Cloud Foundry (PCF).
 
+##<a id="v0.8.93"></a>v0.8.93
+
+**Release Date:** August 21, 2017
+
+Features included in this release:
+
+* Added integration with the [Altoros Log Search for PCF](https://network.pivotal.io/products/altoros-log-search) tile
+* Added configuration of the metrics storage
+
+Known issues in this release:
+
+* After renaming the org/space with the Altoros Heartbeat service instance, access to metrics of this org/space is unavailable.
+  For instructions on how to fix the issue manually, contact Altoros support team.
+* Alerts are not enabled automatically after installation of the Altoros Heartbeat for PCF tile.
+  To enable alerts, open the **alerting** dashboard and click the save icon.
+
 ##<a id="v0.8.92"></a>v0.8.92
 
 **Release Date:** August 16, 2017
