--- a/docs-content/installing.html.md.erb
+++ b/docs-content/installing.html.md.erb
@@ -5,7 +5,7 @@ owner: Partners
 
 This topic describes how to install and configure Altoros Heartbeat for Pivotal Cloud Foundry (PCF).
 
-##<a id='install'></a> Install and Configure Altoros Heartbeat for PCF
+##<a id='install'></a>Install and Configure Altoros Heartbeat for PCF
 
 1. Download the product file and the collectD add-on from [Pivotal Network](https://network.pivotal.io/products/altoros-heartbeat).
 
@@ -18,7 +18,7 @@ This adds the tile to your staging area.
 
 1. Click **Save**.
 
-##<a id='configureaz'></a> Configure AZ and Network Assignments
+##<a id='configureaz'></a>Configure AZ and Network Assignments
 
 1. In Pivotal Ops Manager, click the **Altoros Heartbeat for PCF** tile to open its configuration options.
 
@@ -28,7 +28,7 @@ This adds the tile to your staging area.
 
 1. Click **Save**.
 
-##<a id='alerts'></a> Configure Alerts
+##<a id='alerts'></a>Configure Alerts
 
 1. From the **Settings** tab, click **Heartbeat Alert Configuration**.
 
@@ -59,7 +59,7 @@ This adds the tile to your staging area.
 
 1. Click **Save**.   
 
-##<a id='nozzle'></a> Configure Graphite Nozzle
+##<a id='nozzle'></a>Configure Graphite Nozzle
 
 1. From the **Settings** tab, click **Heartbeat Graphite Nozzle Configuration**.
 
@@ -85,7 +85,7 @@ This adds the tile to your staging area.
 
 1. Click **Save**.
 
-##<a id='grafana'></a> Configure Grafana
+##<a id='grafana'></a>Configure Grafana
 
 1. From the **Settings** tab, click **Heartbeat Grafana Configuration**.
 
@@ -112,9 +112,23 @@ This adds the tile to your staging area.
 
 1. Click **Save**
 
-##<a id='boshhm'></a> Configure BOSH HM Forwarder
+##<a id='storage_configuration'></a>Configure Metrics Storage
 
-1. In the **Settings** tab, click **BOSH HM Forwarder** configuration.
+Configuration of Altoros Heartbeat's metrics storage helps prevent undesirable expansion of the metric tree resulting in overloaded dashboards, cluttered drop-down menus, extra disk usage, etc. To configure the metrics storage:
+
+1. In the **Settings** tab, click **Heartbeat Metrics Storage Configuration**.
+
+1. Select the **Enable** checkbox to activate removal of inactive metrics from the metrics storage.
+
+1. Specify the time period (in days) upon expiry of which the metrics that haven't received any new values throughout will be considered inactive.
+
+    <%= image_tag("images/metrics_storage_configuration.png") %>
+
+1. Click **Save**.
+
+##<a id='boshhm'></a>Configure BOSH HM Forwarder
+
+1. In the **Settings** tab, click **BOSH HM Forwarder configuration**.
 
 1. Specify the default port BOSH HM Forwarder will use to forward the metrics collected from BOSH Agents.
 
@@ -124,7 +138,29 @@ This adds the tile to your staging area.
 
 1. Click **Save**.
 
-##<a id='mysqlproxy'></a> Configure MySQL Proxy
+##<a id='logsearch_integration'></a>Configure Integration with Altoros Log Search for PCF
+
+To enable integration with the Log Search for PCF tile from Altoros:
+
+1. In the **Settings** tab, click **Integration with Altoros Log Search for PCF**.
+
+1. Provide the Elasticsearch Master IP:
+
+    1. Navigate to the **Ops Manager Installation Dashboard** and click the **Altoros Log Search for PCF** tile.
+
+    1. In the **Status** tab, copy the first **Elasticsearch Master IP** from the list.
+
+        <%= image_tag("images/ip_of_elasticsearch.png") %>
+
+    1. Paste the copied IP into the **Elasticsearch Master IP** field.
+
+        <%= image_tag("images/integration_with_logsearch.png") %>
+
+1. Click **Save**.
+
+For more information about this feature, see [**Integration with Altoros Log Search for PCF**](integration-with-logsearch.html).
+
+##<a id='mysqlproxy'></a>Configure MySQL Proxy
 
 1. In the **Settings** tab, click **MySQL Proxy Configuration**.
 
@@ -146,7 +182,7 @@ This adds the tile to your staging area.
 
 1. Click **Save**. 
 
-##<a id='mysql'></a> Configure MySQL Server
+##<a id='mysql'></a>Configure MySQL Server
 
 1. In the **Settings** tab, click **MySQL Server Configuration**.
 
@@ -168,7 +204,7 @@ This adds the tile to your staging area.
 
 1. Return to the Ops Manager Installation Dashboard and click **Apply Changes** to apply the configuration settings.
 
-##<a id='resourceconfig'></a> Configure Resource Config
+##<a id='resourceconfig'></a>Configure Resource Config
 
 If you are using the **gp2** volume type with **Amazon EC2** instances and expect an intensive influx of metrics, Altoros recommends provisioning at least 300&nbsp;GB of persistent disk volume to the Heartbeat PCF Monitoring service to ensure sustained IOPS performance. Perform the following steps to increase the default disk volume value:
 
@@ -182,7 +218,7 @@ If you are using the **gp2** volume type with **Amazon EC2** instances and expec
 
 1. Return to the **Ops Manager Installation Dashboard** and click **Apply Changes** to apply the configuration settings.
 
-##<a id='opsmanager'></a> Configure Ops Manager Director
+##<a id='opsmanager'></a>Configure Ops Manager Director
 
 1. In the **Status** tab, copy the **IP of Bosh HM Forwarder**.
 
@@ -198,7 +234,7 @@ If you are using the **gp2** volume type with **Amazon EC2** instances and expec
  
 1. Return to the **Ops Manager Installation Dashboard** and click **Apply Changes** to apply the configuration settings.
 
-##<a id='redisrabbit'></a> Configure Redis and RabbitMQ
+##<a id='redisrabbit'></a>Configure Redis and RabbitMQ
 
 If you have Redis and RabbitMQ for PCF tiles installed and want to collect metrics from these services using Altoros Heartbeat, adjust the Metrics polling interval for these services to `15`. 
 
