Added "Altoros Log Search for PCF Integration" page

--- a/docs-book/master_middleman/source/subnavs/altoros-heartbeat_subnav.erb
+++ b/docs-book/master_middleman/source/subnavs/altoros-heartbeat_subnav.erb
@@ -22,11 +22,12 @@
       <li>
         <a href="/altoros-heartbeat/using.html">Using Altoros Heartbeat for PCF</a>
       </li>
-
+      <li>
+        <a href="/altoros-heartbeat/integration-with-logsearch.html">Altoros Log Search for PCF Integration</a>
+      </li>
       <li>
         <a href="/altoros-heartbeat/release-notes.html">Release Notes</a>
       </li>
-      
     </ul>
   </div>
 </div><!--end of sub-nav-->
