--- a/docs-book/output/master_middleman/source/subnavs/altoros-heartbeat_subnav.erb
+++ b/docs-book/output/master_middleman/source/subnavs/altoros-heartbeat_subnav.erb
@@ -7,13 +7,11 @@
       <li>
         <a id='home-nav-link' href="/altoros-heartbeat/index.html">Altoros Heartbeat for PCF (Beta)</a>
       </li>
-
       <li>
         <a href="/altoros-heartbeat/installing.html">Installing and Configuring Altoros Heartbeat for PCF</a>
       </li>
-      
       <li>
-        <a href="/altoros-heartbeat/installingcollectd.html">Installing collectd Add-on for PCF</a>
+        <a href="/altoros-heartbeat/installing-collectd.html">Installing collectd Add-on for PCF</a>
       </li>
       <li>
         <a href="/altoros-heartbeat/jmxtrans.html">JMXTrans Agent Integration</a>
@@ -24,7 +22,9 @@
       <li>
         <a href="/altoros-heartbeat/using.html">Using Altoros Heartbeat for PCF</a>
       </li>
-
+      <li>
+        <a href="/altoros-heartbeat/integration-with-logsearch.html">Altoros Log Search for PCF Integration</a>
+      </li>
       <li>
         <a href="/altoros-heartbeat/release-notes.html">Release Notes</a>
       </li>
