--- a/docs-content/installing.html.md.erb
+++ b/docs-content/installing.html.md.erb
@@ -158,7 +158,7 @@ To enable integration with the Log Search for PCF tile from Altoros:
 
 1. Click **Save**.
 
-For more information about this feature, see [**Integration with Altoros Log Search for PCF**](integration-with-logsearch.html).
+For more information about this feature, see [**Altoros Log Search for PCF Integration**](integration-with-logsearch.html).
 
 ##<a id='mysqlproxy'></a>Configure MySQL Proxy
 
