Explicit link for collectd BOSH addon

--- a/docs-content/installing-collectd.html.md.erb
+++ b/docs-content/installing-collectd.html.md.erb
@@ -8,7 +8,7 @@ This topic describes how to add collectd to your Pivotal Cloud Foundry (PCF) dep
 ## <a id='about'></a>About collectd Add-on for PCF
 
 This add-on is required to enable the Altoros Heartbeat monitoring solution consume system metrics 
-from the VMs that make up a PCF deployment.  The [collectd](https://collectd.org/) add-on gathers VM
+from the VMs that make up a PCF deployment. The [collectd](https://collectd.org/) add-on gathers VM
 metrics from PCF platform components and any other BOSH-deployed services (e.g., databases)
 and makes this information available to Altoros Heartbeat over the network. 
 
@@ -62,7 +62,7 @@ Follow the steps below to create a collectd manifest for your deployment:
 
 ##<a id='deploy'></a> Downloading and Deploying the collectd Add-on
 
-1. Download the collectd add-on software binary from the [Pivotal Network](https://network.pivotal.io/) to your local machine.
+1. Download the collectd add-on software binary from the [Pivotal Network](https://network.pivotal.io/products/altoros-heartbeat) to your local machine.
 
 1. Copy the software binary to your Ops Manager VM.
 
