change to cloned from
original was cloned form

--- a/docs-content/jmxtrans.html.md.erb
+++ b/docs-content/jmxtrans.html.md.erb
@@ -14,7 +14,7 @@ These metrics are subsequently pushed to Graphite's Carbon component for caching
 ##<a id='compile'></a> Downloading and Compiling a Java App
 
 1. From the command line, navigate to the app directory.
-   Below, a sample spring-petclinic app (cloned form https://github.com/spring-projects/spring-petclinic) is used.
+   Below, a sample spring-petclinic app (cloned from https://github.com/spring-projects/spring-petclinic) is used.
 
       <pre class="terminal">cd spring-petclinic/</pre>
 
