Update release notes for 0.8.94

--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -5,6 +5,21 @@ owner: Partners
 
 These are release notes for Altoros Heartbeat for Pivotal Cloud Foundry (PCF).
 
+##<a id="v0.8.94"></a>v0.8.94
+
+**Release Date:** August 28, 2017
+
+Features included in this release:
+
+* Service instance update
+* Automated update of all service instances upon PCF tile upgrade
+* Support for monitoring [Altoros Log Search for PCF](https://network.pivotal.io/products/altoros-log-search/) (Elasticsearch)
+
+Known issues in this release:
+
+* Alerts are not enabled automatically after installation of the Altoros Heartbeat for PCF tile.
+  To [enable alerts](using.html#alerting-dashboards), open the **alerting** dashboard and click the save icon.
+
 ##<a id="v0.8.93"></a>v0.8.93
 
 **Release Date:** August 21, 2017
@@ -19,7 +34,7 @@ Known issues in this release:
 * After renaming the org/space with the Altoros Heartbeat service instance, access to metrics of this org/space is unavailable.
   For instructions on how to fix the issue manually, contact Altoros support team.
 * Alerts are not enabled automatically after installation of the Altoros Heartbeat for PCF tile.
-  To enable alerts, open the **alerting** dashboard and click the save icon.
+  To [enable alerts](using.html#alerting-dashboards), open the **alerting** dashboard and click the save icon.
 
 ##<a id="v0.8.92"></a>v0.8.92
 
@@ -36,7 +51,7 @@ Known issues in this release:
 * After renaming the org/space with the Altoros Heartbeat service instance, access to metrics of this org/space is unavailable.
   For instructions on how to fix the issue manually, contact Altoros support team.
 * Alerts are not enabled automatically after installation of the Altoros Heartbeat for PCF tile.
-  To enable alerts, open the **alerting** dashboard and click the save icon.
+  To [enable alerts](using.html#alerting-dashboards), open the **alerting** dashboard and click the save icon.
 
 ##<a id="v0.8.91"></a>v0.8.91
 
@@ -58,7 +73,7 @@ Known issues in this release:
 * After renaming the org/space with the Altoros Heartbeat service instance, access to metrics of this org/space is unavailable.
   For instructions on how to fix the issue manually, contact Altoros support team.
 * Alerts are not enabled automatically after installation of the Altoros Heartbeat for PCF tile.
-  To enable alerts, open the **alerting** dashboard and click the save icon.
+  To [enable alerts](using.html#alerting-dashboards), open the **alerting** dashboard and click the save icon.
 
 ##<a id="v0.8.90"></a>v0.8.90
 
@@ -81,4 +96,4 @@ Known issues in this release:
 * After renaming the org/space with the Altoros Heartbeat service instance, access to metrics of this org/space is unavailable.
   For instructions on how to fix the issue manually, contact Altoros.
 * Alerts are not enabled automatically after installation of the Altoros Heartbeat for PCF tile.
-  To enable alerts, open the **alerting** dashboard and click the save icon.
+  To [enable alerts](using.html#alerting-dashboards), open the **alerting** dashboard and click the save icon.
