--- a/docs-content/using.html.md.erb
+++ b/docs-content/using.html.md.erb
@@ -114,27 +114,15 @@ The dashboards accessible from the Admin view are:
   LA 1 min, memory/swap usage, health, health timeline, health status, system disc usage, persistent disc usage,
   and ephemeral disc usage.
 
-**Cf component** dashboards provide full overview of PCF API Stats, installation capacity, 
-  and component-specific metrics from Consul, Diego, Etcd, Router, and UAA.
+**Cf component** dashboards provide full overview of PCF API Stats, installation capacity, and component-specific metrics from Consul, Diego, Etcd, Router, and UAA.
 
-**Cf service** dashboards contain panels with service-specific metrics for MySQL, PostgreSQL, Redis, and RabbitMQ.
+**Cf service** dashboards contain panels with service-specific metrics for various services (e.g. MySQL, PostgreSQL, Redis, and RabbitMQ).
 
-<p class="note"><strong>Note</strong>: To track metrics from the External MySQL used by PCF Elastic Runtime on the "Service - Postgresql Overview" dashboard, choose "cf-*" from the Deloyment drop-down menu and "mysql" from the Host drop-down menu.</p>
+For more information about 3rd party services monitoring, see [3rd Party Services Monitoring](services-monitoring.html).
 
-<p class="note"><strong>Note</strong>: To track metrics from the Internal MySQL used by PCF Elastic Runtime on the "Service - Postgresql Overview" dashboard, choose "cf-*" from the Deloyment drop-down menu and "cloud_controller" from the Host drop-down menu.</p>
+<a id='alerting-dashboards'></a>**Alerting dashboards** include panels with BOSH HM alerts and Diego alerts.
 
-<p class="note"><strong>Note</strong>: To track metrics from the Crunchy PostgreSQL (on-demand version) deployment
-   on the "Service - Postgresql Overview" dashboard, choose "service-instance_*" from the Deloyment drop-down menu and "postgresql" from the Host drop-down menu.</p>
-   
-<p class="note"><strong>Note</strong>: To track metrics from the Dingo PostgreSQL deployment
-on the "Service - Postgresql Overview" dashboard, choose "dingo-postgresql-*" from the Deloyment drop-down menu and "router" from the Host drop-down menu.</p>
-
-<%= image_tag("images/dingo-postgres.png") %>
-
-**Alerting dashboards** include panes for BOSH HM alerts and Diego alerts.
-
-<p class="note"><strong>Note</strong>: To enable alerts after installing "Altoros Heartbeat for PCF Tile",
-   open these dashboards and click the save icon:</p>
+<p class="note"><strong>Note</strong>: To enable alerts after installing "Altoros Heartbeat for PCF Tile", open dashboards with alerts ("Pivotal Cloud Foundry Overview" and dashboards with tag **alerting**) and click the save icon:</p>
 
 <%= image_tag("images/diego-alerts.png") %>
 
