--- a/docs-book/master_middleman/source/subnavs/altoros-heartbeat_subnav.erb
+++ b/docs-book/master_middleman/source/subnavs/altoros-heartbeat_subnav.erb
@@ -23,6 +23,9 @@
         <a href="/altoros-heartbeat/using.html">Using Altoros Heartbeat for PCF</a>
       </li>
       <li>
+        <a href="/altoros-heartbeat/services-monitoring.html">3rd Party Services Monitoring</a>
+      </li>
+      <li>
         <a href="/altoros-heartbeat/integration-with-logsearch.html">Altoros Log Search for PCF Integration</a>
       </li>
       <li>
