--- a/docs-book/output/master_middleman/source/subnavs/altoros-heartbeat_subnav.erb
+++ b/docs-book/output/master_middleman/source/subnavs/altoros-heartbeat_subnav.erb
@@ -23,12 +23,14 @@
         <a href="/altoros-heartbeat/using.html">Using Altoros Heartbeat for PCF</a>
       </li>
       <li>
+        <a href="/altoros-heartbeat/services-monitoring.html">3rd Party Services Monitoring</a>
+      </li>
+      <li>
         <a href="/altoros-heartbeat/integration-with-logsearch.html">Altoros Log Search for PCF Integration</a>
       </li>
       <li>
         <a href="/altoros-heartbeat/release-notes.html">Release Notes</a>
       </li>
-      
     </ul>
   </div>
 </div><!--end of sub-nav-->
